update hexagon color progress and middle rotatiion also add the outer text

--- a/index.html
+++ b/index.html
@@ -1,50 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
-    <div style="width: 100%; height: 100vh;">
-        
-    </div>
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
+    <div style="width: 100%; height: 100vh"></div>
     <section id="wayOfWorking">
-        <div class="mainWarper">
-            <!-- ===static=== -->
-            <div class="half static_content">
-                <div class="text_content">
-                    <h1>Our</h1>
-                    <h1>approach</h1>
-                    <p>Only when we understand how a society works can we achieve an inclusive experience. Places that make a difference. This requires a knack for research. That's why we created the INPACT model. We take each step in the model together. With our client, but also always with the end user. This is how we make INPACT.</p>
-                </div>
-            </div>
-            <!-- ==dyanamic== -->
-            <div class="half dyanamic_component">
-                <div class="blackBox">
-                    <div class="hexagon">
-                        <div class="mid_ball">
-                            <div class="middle"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+      <div class="mainWarper">
+        <!-- ===static=== -->
+        <div class="half static_content">
+          <div class="text_content">
+            <h1>Our</h1>
+            <h1>approach</h1>
+            <p>
+              Only when we understand how a society works can we achieve an
+              inclusive experience. Places that make a difference. This requires
+              a knack for research. That's why we created the INPACT model. We
+              take each step in the model together. With our client, but also
+              always with the end user. This is how we make INPACT.
+            </p>
+            <button class="pro_button">
+              OUR APPROCH
+              <span class="btn_arrow"
+                ><svg
+                  viewBox="0 0 32 32"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  fill="currentColor"
+                >
+                  <g>
+                    <path
+                      d="M19,26a1,1,0,0,1-.71-.29,1,1,0,0,1,0-1.42L26.59,16l-8.3-8.29a1,1,0,0,1,1.42-1.42l9,9a1,1,0,0,1,0,1.42l-9,9A1,1,0,0,1,19,26Z"
+                    />
+                    <path d="M28,17H4a1,1,0,0,1,0-2H28a1,1,0,0,1,0,2Z" />
+                  </g>
+                </svg>
+              </span>
+            </button>
+          </div>
         </div>
+        <!-- ==dyanamic== -->
+        <div class="half dyanamic_component">
+          <div class="blackBox">
+            <div class="hexagon_container">
+                <span class="outerText outer1">IMAGINE</span>
+                <span class="outerText outer2">NAVIGATE</span>
+                <span class="outerText outer3">POSITION</span>
+                <span class="outerText outer4">ARTIFY</span>
+                <span class="outerText outer5">CONSTRUCT</span>
+                <span class="outerText outer6">TEST</span>
+                <div class="hexagon_warper">
+                  <div class="hexagon">
+                    <div class="mid_ball">
+                      <div class="middle"></div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
-    <div style="width: 100%; height: 2000px;"></div>
-    
-
-
+    <div style="width: 100%; height: 2000px"></div>
 
     <!-- ======scripts===== -->
     <!-- GSAP Core -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-<!-- ScrollTrigger Plugin -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
-<!-- Script -->
-<script src="script.js"></script>
-
-
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <!-- ScrollTrigger Plugin -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
+    <!-- Script -->
+    <script src="script.js"></script>
+  </body>
 </html>
