--- a/includi.html
+++ b/includi.html
@@ -29,6 +29,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        overflow: hidden;
       }
       #wayOfWorking .mainWarper .static_content .text_content {
         width: 80%;
@@ -232,7 +233,7 @@
         .mid_ball {
         width: 100px;
         height: 100px;
-        border: 1px solid rgba(255, 217, 0, 0.3764705882);
+        border: 1px solid rgba(255, 217, 0, 0.2274509804);
         display: flex;
         align-items: center;
         justify-content: center;
@@ -494,40 +495,75 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <!-- Script -->
     <script>
-      console.log("joy hori");
+      // window.addEventListener("DOMContentLoaded", () => {
+
+      //   let tl1 = gsap.timeline({
+      //     scrollTrigger: {
+      //       trigger: "#wayOfWorking",
+      //       start: "top top",
+      //       end: "+=3000",
+      //       scrub: true,
+      //       pin: true,
+      //       markers: true
+      //     }
+      //   });
+
+      //   tl1.to(".middle", {
+      //     rotate: 360,
+      //     duration: 3,
+      //     ease: "none"
+      //   });
+
+      //   tl1.to({}, {
+      //     duration: 3,
+      //     ease: "none",
+      //     onUpdate: function () {
+      //       let progress = tl1.progress();
+      //       let angle = progress * 360;
+      //       document.querySelector(".mid_ball").style.backgroundImage =
+      //         `conic-gradient(#ffd900 0deg ${angle}deg, rgba(255, 217, 0, 0) ${angle}deg 360deg)`;
+      //         document.querySelector(".hexagon_warper").style.backgroundImage =
+      //         `conic-gradient(#ffd900 0deg ${angle}deg, rgba(255, 217, 0, 0) ${angle}deg 360deg)`;
+      //     }
+      //   },0);
+
+      // });
 
       window.addEventListener("DOMContentLoaded", () => {
-        let tl1 = gsap.timeline({
+        const tl = gsap.timeline({
           scrollTrigger: {
             trigger: "#wayOfWorking",
             start: "top top",
-            end: "+=3000",
+            end: "+=6000",
             scrub: true,
             pin: true,
             markers: true,
           },
         });
 
-        tl1.to(
+        // 1. Rotation animation
+        tl.to(
           {},
           {
-            duration: 1,
+            duration: 50,
             ease: "none",
             onUpdate: function () {
-              let progress = tl1.progress(); // 0 to 1
+              const tweenProgress = this.progress();
               let angle;
-              if (progress <= 0.1) {
-                angle = (progress / 0.1) * 35;
+
+              if (tweenProgress <= 0.1) {
+                angle = (tweenProgress / 0.1) * 35;
                 document.querySelector(
                   ".middle"
                 ).style.transform = `rotate(0deg)`;
               } else {
-                angle = 35 + ((progress - 0.1) / 0.9) * (360 - 35);
-                let middleAngle = ((progress - 0.1) / 0.9) * 360;
+                angle = 35 + ((tweenProgress - 0.1) / 0.9) * (360 - 35);
+                const middleAngle = ((tweenProgress - 0.1) / 0.9) * 360;
                 document.querySelector(
                   ".middle"
                 ).style.transform = `rotate(${middleAngle}deg)`;
               }
+
               document.querySelector(
                 ".mid_ball"
               ).style.backgroundImage = `conic-gradient(#ffd900 0deg ${angle}deg, rgba(255, 217, 0, 0) ${angle}deg 360deg)`;
@@ -537,6 +573,29 @@
             },
           }
         );
+
+        // 2. Move static content out of view
+        tl.to(
+          ".static_content",
+          {
+            x: "-200%",
+            duration: 5,
+            ease: "none",
+          },
+          ">"
+        );
+
+        // 3. Expand dynamic component to full width
+        tl.to(
+          ".dyanamic_component",
+          {
+            width: "100%",
+            flexGrow: 1,
+            duration: 10,
+            ease: "none",
+          },
+          "-=5"
+        ); // sync both to start together
       });
     </script>
   </body>
