--- a/index.html
+++ b/index.html
@@ -47,19 +47,30 @@
         <div class="half dyanamic_component">
           <div class="blackBox">
             <div class="hexagon_container">
-                <span class="outerText outer1">IMAGINE</span>
-                <span class="outerText outer2">NAVIGATE</span>
-                <span class="outerText outer3">POSITION</span>
-                <span class="outerText outer4">ARTIFY</span>
-                <span class="outerText outer5">CONSTRUCT</span>
-                <span class="outerText outer6">TEST</span>
-                <div class="hexagon_warper">
-                  <div class="hexagon">
+              <span class="outerText outer1">IMAGINE</span>
+              <span class="outerText outer2">NAVIGATE</span>
+              <span class="outerText outer3">POSITION</span>
+              <span class="outerText outer4">ARTIFY</span>
+              <span class="outerText outer5">CONSTRUCT</span>
+              <span class="outerText outer6">TEST</span>
+              <div class="hexagon_warper">
+                
+                <div class="hexagon">
+                  <video
+                    class="bg-video"
+                    src="./assets/video001.mp4"
+                    autoplay
+                    muted
+                    loop
+                    playsinline
+                  ></video>
+                  <div class="hexagon_overlay">
                     <div class="mid_ball">
                       <div class="middle"></div>
                     </div>
                   </div>
                 </div>
+              </div>
             </div>
           </div>
         </div>
