add inner text and modifi outertext

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         <div class="half dyanamic_component">
           <div class="blackBox">
             <div class="hexagon_container">
+              <h3 class="innerTex">THIS IS <br> HOW WE MAKE <br> INPACT</h3>
               <span class="outerText outer1">IMAGINE</span>
               <span class="outerText outer2">NAVIGATE</span>
               <span class="outerText outer3">POSITION</span>
