--- a/index.html
+++ b/index.html
@@ -10,10 +10,31 @@
     svg {
       background-color: rgba(243, 199, 5, 0.411);
     }
+    .mouse-follower {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 40px;
+    height: 40px;
+    pointer-events: none;
+    border-radius: 50%;
+    background: rgba(255, 217, 0, 0.3);
+    box-shadow: 0 0 24px 8px rgba(255, 217, 0, 0.4);
+    transform: translate(-50%, -50%);
+    z-index: 9999;
+    transition: background 0.2s, box-shadow 0.2s;
+    will-change: transform;
+  }
   </style>
 </head>
 
 <body>
+  <div class="mouse-follower">
+    <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <circle cx="20" cy="20" r="16" stroke="#FFD900" stroke-width="3" fill="rgba(255,217,0,0.13)" />
+      <circle cx="20" cy="20" r="8" stroke="#FFD900" stroke-width="2" fill="rgba(255,217,0,0.3)" />
+    </svg>
+  </div>
   <div id="smooth-wrapper">
     <div id="smooth-content">
 
@@ -35,18 +56,26 @@
                 <line x1="10" y1="10" x2="90" y2="90" stroke="black" stroke-width="2" />
                 <line x1="10" y1="10" x2="90" y2="90" stroke="black" stroke-width="2" />
                 <ellipse cx="50" cy="50" rx="20" ry="10" fill="transparent" stroke="purple" stroke-width="2" />
-                <polyline points="60,60 85,95 95,95 95,85 40,40  " fill="transparent" stroke="red" stroke-width="2" />
+                <polyline points="60,60 85,95 95,95 95,85 60,60" fill="transparent" stroke="red" stroke-width="2" />
+              </svg>
+              <svg class="svg_2" viewBox="0 0 200 200" xmlns="http://www.w3.org/2000/svg" width="240"
+                height="240" fill="none">
+                
+                  <path
+                    d="M10 10  Q90 10 70 70 Q60 190 150 150"  
+                    stroke="red" 
+                    stroke-width="2px"
+                  />
+              </svg>
+              <svg class="svg_3" width="240px" height="240px" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M11.0287 2.5396C11.6328 2.20402 12.3672 2.20402 12.9713 2.5396L19.9713 6.42849C20.6062 6.78123 21 7.45047 21 8.17681V15.8232C21 16.5495 20.6062 17.2188 19.9713 17.5715L12.9713 21.4604C12.3672 21.796 11.6328 21.796 11.0287 21.4604L4.02871 17.5715C3.39378 17.2188 3 16.5495 3 15.8232V8.17681C3 7.45047 3.39378 6.78123 4.02871 6.42849L11.0287 2.5396Z" stroke="#000000" stroke-width="0.22"/>
               </svg>
 
             </div>
+
           </div>
         </div>
       </div>
-
-
-
-
-
       <section id="wayOfWorking">
         <div class="mainWarper">
           <!-- ===static=== -->
@@ -116,10 +145,77 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollSmoother.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/SplitText.min.js"></script>
-
-
+  <script src="https://assets.codepen.io/16327/DrawSVGPlugin3.min.js"></script>
   <!-- Script -->
   <script src="script.js"></script>
+
+  <script>
+    //draw svg animation
+    gsap.registerPlugin(DrawSVGPlugin);
+    gsap.fromTo(".svg_2 path", {
+      drawSVG: "0%",
+    }, {
+      drawSVG: "100%",
+      duration: 3,
+      ease: "power1.inOut",
+      repeat: -1,
+      yoyo: true,
+      stagger: 0.2
+    });
+    
+  </script>
+  <script>
+  // Mouse follower effect
+  const follower = document.querySelector('.mouse-follower');
+  let mouseX = window.innerWidth / 2, mouseY = window.innerHeight / 2;
+  let currentX = mouseX, currentY = mouseY;
+
+  // Only animate svg_3 path when mouse is over the svg
+  const svg3 = document.querySelector('.svg_3');
+  const svg3Path = document.querySelector('.svg_3 path');
+  let svg3Rect = null;
+
+  if (svg3) {
+    svg3.addEventListener('mouseenter', () => {
+      svg3Rect = svg3.getBoundingClientRect();
+    });
+    svg3.addEventListener('mousemove', (e) => {
+      if (!svg3Rect) svg3Rect = svg3.getBoundingClientRect();
+      // Calculate progress based on mouse X within the SVG
+      const x = e.clientX - svg3Rect.left;
+      const progress = Math.max(0, Math.min(1, x / svg3Rect.width));
+      gsap.to(svg3Path, {
+        drawSVG: `${Math.floor(progress * 100)}%`,
+        duration: 0.3,
+        ease: "power1.out"
+      });
+    });
+    svg3.addEventListener('mouseleave', () => {
+      svg3Rect = null;
+      // Optionally reset the path
+      gsap.to(svg3Path, {
+        drawSVG: `100%`,
+        duration: 0.3,
+        ease: "power1.out"
+      });
+    });
+  }
+
+  // Keep mouse follower effect global
+  document.addEventListener('mousemove', (e) => {
+    mouseX = e.clientX;
+    mouseY = e.clientY;
+  });
+
+  function animateFollower() {
+    currentX += (mouseX - currentX) * 0.18;
+    currentY += (mouseY - currentY) * 0.18;
+    follower.style.transform = `translate(${currentX - 20}px, ${currentY - 20}px)`;
+    requestAnimationFrame(animateFollower);
+  }
+  animateFollower();
+</script>
 </body>
+
 
 </html>
